resolve #4826 Navigation bar items do not fit the smaller screen area

--- a/src/defaultV2-theme/blocks/sd-body.scss
+++ b/src/defaultV2-theme/blocks/sd-body.scss
@@ -32,13 +32,11 @@
   }
 }
 
-.sd-body__navigation {
+.sd-body__navigation.sd-action-bar {
   box-sizing: border-box;
   padding: calcSize(2) calcSize(2);
-
-  .sv-action:not(.sv-action--hidden)~.sv-action:not(.sv-action--hidden) {
-    margin-left: calcSize(2);
-  }
+  flex-wrap: wrap;
+  gap: calcSize(2);
 }
 
 .sd-body__progress {
